--- a/FitnessGuru-Main/Views/Shared/_Layout.cshtml
+++ b/FitnessGuru-Main/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -54,8 +54,7 @@
 
         $(function () {
             $('.date').datetimepicker({
-                format: 'YYYY-MM-DD',
-                defaultDate: '2018-08-20'
+                format: 'YYYY-MM-DD'
             });
         });
     </script>
