--- a/FitnessGuru-Main/Views/Home/Index.cshtml
+++ b/FitnessGuru-Main/Views/Home/Index.cshtml
@@ -3,24 +3,59 @@
 }
 
 
+<div id="carouselDiv" class="row">
+    <div class="col-xs-12">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" height="100px">
+
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
+
+
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img class="img-responsive" src="~/images/img_bg_1.jpg" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="~/images/img_bg_2.jpg" />
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="~/images/img_bg_3.jpg" />
+                    <div class="carousel-caption">
+                        <h3>STOP WISHING, START DOING</h3>
+                    </div>
+                </div>
+                <div class="item">
+                    <img class="img-responsive" src="~/images/img_bg_4.jpg" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row">
 
-    <div class="jumbotron">
-        <h2>Welcome to Fitness Guru</h2>
-        <p>
-            Come join us at FitnessGuru and take advantage of the various services that we provide you and for free.
-        </p>
-    </div>
-    <div class="col-md-6 col-sm-12">
+    @*<div class="jumbotron">
+            <h2>Welcome to Fitness Guru</h2>
+            <p>
+                Come join us at FitnessGuru and take advantage of the various services that we provide you and for free.
+            </p>
+        </div>*@
+
+
+
+    <div class="col-xs-6">
         <h2>Already A Member</h2>
-        <p>
-            
-            @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" , @class="btn btn-primary"})
-        </p>
-      
+        @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn btn-primary" })
+
+
     </div>
-    <div class="col-md-6 col-sm-12">
+    <div class="col-xs-6">
         <h2>New to Fitness Guru</h2>
-        @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class="btn btn-primary" })
+        @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class = "btn btn-primary" })
     </div>
 </div>
