--- a/FitnessGuru-Main/Content/Site.css
+++ b/FitnessGuru-Main/Content/Site.css
@@ -9,7 +9,9 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-image: linear-gradient(30deg, #DAA520, purple);
+    /*background-image: linear-gradient(30deg, #DAA520, #FD00AB);*/
+    background-image: linear-gradient(-45deg, black, grey, black );
+    color: white;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -33,12 +35,83 @@ textarea,
     max-width: 280px;
 }
 
-input.form-block,
-select.form-block,
-textarea.form-block {
-    max-width: none;
-}
+    input.form-block,
+    select.form-block,
+    textarea.form-block {
+        max-width: none;
+    }
 
 .navbar {
     color: black;
+    min-height: 50px;
 }
+
+.navbar-header {
+    margin-top: 5px;
+}
+
+.navbar-nav {
+    margin-top: 5px;
+}
+
+.table {
+    font-size: 15px;
+    margin-top: 50px;
+}
+
+.date, .datetime {
+    color: black;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 225px !important;
+    }
+    .carousel-caption {
+        top: 25%;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 300px !important;
+    }
+    .carousel-caption {
+        top: 15%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 400px !important;
+    }
+    .carousel-caption {
+        top: 46%;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 500px !important;
+    }
+    .carousel-caption {
+        top: 46%;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .col-xs-12 > .carousel > .carousel-inner {
+        width: 100%;
+        height: 600px !important;
+    }
+    .carousel-caption {
+        top: 46%;
+    }
+}
+
+
