--- a/FitnessGuru-Main/Views/GymMembers/Index.cshtml
+++ b/FitnessGuru-Main/Views/GymMembers/Index.cshtml
@@ -101,7 +101,7 @@
 
     <div class="row">
 
-        <div class="col-md-6 col-xs-6">
+        <div class="col-md-9 col-xs-9">
             @if (isUpcomingSessionsEmpty)
             {
                 <h3>Seems like there are no sessions planned</h3>
@@ -114,7 +114,7 @@
         
 
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-xs-12">
                 @if (!isUpcomingSessionsEmpty)
                 {
                     <table class="table table-responsive">
