--- a/FitnessGuru-Main/Views/GymMembers/ListSessionsCreated.cshtml
+++ b/FitnessGuru-Main/Views/GymMembers/ListSessionsCreated.cshtml
@@ -63,6 +63,7 @@ else
 
         <h2 class="col-sm-6">You haven't yet created any sessions</h2>
         <h2>@Html.ActionLink("Create New", "Create", "Sessions", null, new { @class = "btn btn-primary" })</h2>
+        <h2 class="col-xs-2">@Html.ActionLink("View History", "History", "Trainers", null, new { @class = "btn btn-info" })</h2>
     </div>
 }
 
