--- a/FitnessGuru-Main/Views/Admin/Details.cshtml
+++ b/FitnessGuru-Main/Views/Admin/Details.cshtml
@@ -1,17 +1,33 @@
 ﻿@model FitnessGuru_Main.Models.GymMember
 
+@using FitnessGuru_Main.Models
+@using Microsoft.AspNet.Identity.EntityFramework
+@using Microsoft.AspNet.Identity
+
+
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
+    ApplicationDbContext userscontext = new ApplicationDbContext();
+    var userStore = new UserStore<ApplicationUser>(userscontext);
+    var userManager = new UserManager<ApplicationUser>(userStore);
+
+    var IsTrainer = true;
+    if (!userManager.IsInRole(Model.UserId, "Trainer"))
+    {
+        //userManager.AddToRole(user.Id, "Admin");
+        IsTrainer = false;
+    }
+
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>GymMember</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
+
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
@@ -51,13 +67,13 @@
             @Html.DisplayFor(model => model.AddressLine2)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.ProfilePicPath)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.ProfilePicPath)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Desc)
@@ -68,14 +84,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Gender)
         </dt>
 
@@ -83,14 +91,28 @@
             @Html.DisplayFor(model => model.Gender)
         </dd>
 
+        <dt>
+            Is Trainer
+        </dt>
+
+        <dd>
+            @if (IsTrainer)
+            {
+                @:Yes
+            }
+            else
+            {
+                @:No
+            }
+        </dd>
+
     </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
 </div>
+<p>
+    @if (!IsTrainer)
+    {
+        @Html.ActionLink("Convert to Trainer", "AddAsTrainer", new {UserId = Model.UserId}) @:|
+
+    }
+    @Html.ActionLink("Back to List", "Index")
+</p>
