--- a/FitnessGuru-Main/Views/GymMembers/Index.cshtml
+++ b/FitnessGuru-Main/Views/GymMembers/Index.cshtml
@@ -2,7 +2,7 @@
 @*@using Microsoft.AspNet.Identity*@
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Member Home";
 }
 
 <h2>Welcome @ViewBag.Name</h2>
@@ -13,7 +13,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-6 col-xs-6">
+        <div class="col-xs-12 col-xs-12">
             @if (isUserJoinedSessionsEmpty)
             {
                 <h3>Seems like you haven't enrolled for any upcoming sessions</h3>
@@ -23,7 +23,7 @@
                 <h3>Are you prepared for your upcoming sessions</h3>
             }
         </div>
-        <div class="col-md-3 col-xs-6">
+        @*<div class="col-md-3 col-xs-6">
             @using (Html.BeginForm("ShowHistory", "GymMembers", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
@@ -35,7 +35,7 @@
                     </div>
                 </div>
             }
-        </div>
+        </div>*@
     </div>
 
     <div class="row">
@@ -101,7 +101,7 @@
 
     <div class="row">
 
-        <div class="col-md-9 col-xs-9">
+        <div class="col-xs-12 col-xs-12">
             @if (isUpcomingSessionsEmpty)
             {
                 <h3>Seems like there are no sessions planned</h3>
@@ -174,9 +174,9 @@
         </div>
     </div>
 
-    <p>
+    @*<p>
         @Html.ActionLink("View Sessions Managed By You", "ListSessionsCreated", "GymMembers", new { area = "" }, new { returnUrl = "Sessions/Index", @class = "btn btn-primary" })
-    </p>
+    </p>*@
 
 </div>
 
